code formatting with prettier